--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,86 @@
 #root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   width: 100%;
   margin: 0 auto;
   /* padding: 2rem; */
   text-align: center;
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
-  padding-top: 0;
+  padding: 0;
+  margin: 0;
+  min-height: 100vw;
+  gap: 30px;
 
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.list{
+  height: 100%;
+  width: 100vw;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 20px;
+  margin: 0;
+  justify-content: flex-start;
+  gap: 20px;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
-  padding: 2em;
+  
+  width: 22vw;
+  aspect-ratio: 2;
+  background-color: #2F4F4F;
+  border-radius: 6px;
+  color: white;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font-size: 2vw;
+  font-weight: 500;
 }
-
-.read-the-docs {
-  color: #888;
+body{
+  
+  margin: 0;
 }
-
 .title-card {
   min-width: 100%;
+  font-size: 28px;
+  font-weight: normal;
   background-color: #282C34;
-  color: #FEFEFE;
-  padding: 40px;
+  color: #ffffff;
+  padding: px;
+  margin-top: 0;
+}
 
+a{
+  text-decoration: none;
+  color: white;
+
+}
+
+
+.details{
+  width: fit-content;
+  aspect-ratio: 2;
+  background-color: #2F4F4F;
+  border-radius: 6px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  align-items: start;
+  justify-content: space-evenly;
+  font-size: 3vw;
+  font-weight: 100;
+  padding: 20px 60px;
+}
+.details a{
+  text-decoration: underline;
+}
+
+.details-page{
+  min-width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
